# clip_dinoiser

./: pyproject.toml
scripts/: demo.py
src/clip_dinoiser/models/clip_dinoiser/: clip_dinoiser.py
src/clip_dinoiser/models/maskclip/: maskclip.py
